Update workload controller for new design (#675)
**Requirements:**
- [x] Merge https://github.com/appscode/stash/pull/647 to master
- [x] Merge https://github.com/appscode/stash/pull/673 to master
- [x] Merge https://github.com/appscode/stash/pull/674 to master
- [x] Merge https://github.com/appscode/stash/pull/671 to master
- [x] Rebase against master

**Tasks:**
- [x] Update Restore Logic
- [x] Update Backup Logic
- [x] Update Workload Controllers
	- [x] Deployment
	- [x] DaemonSet
	- [x] ReplicationControler
	- [x] ReplicaSet
	- [x] StatefulSet
- [x] Fix ConfigMap lock deletion and RBAC stuff deletion logic
- [x] Ensure sidecar/init-container according to new design
	- [x] Ensure Restore init-container injection
	- [x] Ensure Restore init-container deletion
	- [x] Ensure Backup sidecar injection
	- [x] Ensure Backup sidecar deletion
- [x] Add new backup command (sagor is working)
- [x] Add new restore command

- [x] Add controller (possibly in different PR)
	- [x] PersistentVolumeClaim
	- [x] AppBinding

--- a/docs/examples/workloads/daemonset/default_backup.yaml
+++ b/docs/examples/workloads/daemonset/default_backup.yaml
@@ -1,16 +1,24 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: v1
+kind: ConfigMap
 metadata:
-  name: stash-demo
+  name: stash-sample-data
   namespace: demo
+data:
+  file1.txt: "This test file 1"
+  file2.txt: "This is file 2"
+---
+apiVersion: apps/v1
+kind: DaemonSet
+metadata:
   labels:
     app: stash-demo
-  # if stash find bellow annotations, it will take backup of it.
+  name: stash-demo
+  namespace: demo
   annotations:
-    stash.appscode.com/backup-template: "workload-data-backup-template"
-    stash.appscode.com/target-directories: "[/source/data]"
+    stash.appscode.com/backup-template: workload-backup-template
+    stash.appscode.com/target-directories: "/source/data"
+    stash.appscode.com/volume-mounts: "source-data:/source/data"
 spec:
-  replicas: 1
   selector:
     matchLabels:
       app: stash-demo
