--- a/docs/examples/workloads/deployment/deployment.yaml
+++ b/docs/examples/workloads/deployment/deployment.yaml
@@ -1,16 +1,21 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: stash-sample-data
+  namespace: demo
+data:
+  file1.txt: "This test file 1"
+  file2.txt: "This is file 2"
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: stash-demo
-  namespace: demo
   labels:
     app: stash-demo
-  # if stash find bellow annotations, it will take backup of it.
-  annotations:
-    stash.appscode.com/backup-template: "workload-data-backup-template"
-    stash.appscode.com/target-directories: "[/source/data]"
+  name: stash-demo
+  namespace: demo
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: stash-demo
