--- a/docs/examples/volume-snapshot/backupconfiguration.yaml
+++ b/docs/examples/volume-snapshot/backupconfiguration.yaml
@@ -4,13 +4,13 @@ metadata:
   name: deployments-volume-snapshot
   namespace: demo
 spec:
-  schedule: "* * * * *"
+  schedule: "*/1 * * * *"
   driver: VolumeSnapshotter
   target:
     ref:
       apiVersion: apps/v1
-      kind: StatefulSet
-      name: web
+      kind: Deployment
+      name: stash-demo
     snapshotClassName: default-snapshot-class
   retentionPolicy:
     name: 'keep-last-5'
