--- a/docs/examples/workloads/backup_template.yaml
+++ b/docs/examples/workloads/backup_template.yaml
@@ -1,3 +1,24 @@
+apiVersion: v1
+kind: Secret
+metadata:
+  name: local-secret
+  namespace: demo
+data:
+  RESTIC_PASSWORD: bm90QHNlY3JldA==
+type: Opaque
+---
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+  name: repo-pvc
+  namespace: demo
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+---
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfigurationTemplate
 metadata:
@@ -6,8 +27,9 @@ spec:
   backend:
     local:
       mountPath: /safe/data
-      hostPath:
-        path: /data/stash-test/${TARGET_NAMESPACE}/${TARGET_KIND}/${TARGET_NAME}
+      subPath: repo/stash-test/${TARGET_NAMESPACE}/${TARGET_KIND}/${TARGET_NAME}
+      persistentVolumeClaim:
+        claimName: repo-pvc
     storageSecretName: local-secret
   schedule: "* * * * *"
   retentionPolicy:
