--- a/docs/examples/restore-in-pvc-template/restore-statefulset.yaml
+++ b/docs/examples/restore-in-pvc-template/restore-statefulset.yaml
@@ -1,23 +1,25 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: RestoreSession
 metadata:
-  name: rs-deployment
+  name: restore-statefulset
   namespace: demo
 spec:
   repository:
     name: local-repo
   rules:
   - paths:
-    - /source/data
+    - /source/data-1
+    - /source/data-2
   target:
+    replicas: 3 # number of replica of the statefulset which was backed up
     volumeMounts:
-    - name:  restored-data-1
+    - name:  restored-data-1-stash-demo # format <claim name>-<statefulset name>
       mountPath:  /source/data-1
-    - name:  restored-data-2
+    - name:  restored-data-2-stash-demo
       mountPath:  /source/data-2
     volumeClaimTemplates:
     - metadata:
-        name:  restored-data-1
+        name: restored-data-1-stash-demo # format <claim name>-<statefulset name>
       spec:
         accessModes: [ "ReadWriteOnce" ]
         storageClassName: "standard"
@@ -25,7 +27,7 @@ spec:
           requests:
             storage: 1Gi
     - metadata:
-        name:  restored-data-2
+        name: restored-data-2-stash-demo
       spec:
         accessModes: [ "ReadWriteOnce" ]
         storageClassName: "standard"
