--- a/docs/examples/volume-snapshot/standalonePVC/backupconfiguration.yaml
+++ b/docs/examples/volume-snapshot/standalonePVC/backupconfiguration.yaml
@@ -1,17 +1,16 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfiguration
 metadata:
-  name: statefulset-volume-snapshot
+  name: pvc-volume-snapshot
   namespace: demo
 spec:
   schedule: "*/1 * * * *"
   driver: VolumeSnapshotter
   target:
     ref:
-      apiVersion: apps/v1
-      kind: StatefulSet
-      name: stash-demo
-    replicas : 3
+      apiVersion: v1
+      kind: PersistentVolumeClaim
+      name: source-pvc
     snapshotClassName: default-snapshot-class
   retentionPolicy:
     name: 'keep-last-5'
