--- a/docs/examples/volume-snapshot/storageclass.yaml
+++ b/docs/examples/volume-snapshot/storageclass.yaml
@@ -7,4 +7,5 @@ parameters:
 provisioner: pd.csi.storage.gke.io
 reclaimPolicy: Delete
 volumeBindingMode: Immediate
+#volumeBindingMode: WaitForFirstConsumer
 
