--- a/docs/examples/volume-snapshot/statefulset/restoresession.yaml
+++ b/docs/examples/volume-snapshot/statefulset/restoresession.yaml
@@ -9,7 +9,7 @@ spec:
     replicas : 3
     volumeClaimTemplates:
       - metadata:
-          name: backup-pvc
+          name: source-data-stash-demo
         spec:
           accessModes: [ "ReadWriteOnce" ]
           storageClassName: "standard"
@@ -18,6 +18,6 @@ spec:
               storage: 6Gi
           dataSource:
             kind: VolumeSnapshot
-#            name: ${CLAIM_NAME}-${POD_ORDINAL}-1560231666
-            name: ${CLAIM_NAME}-1560342603
+            name: ${CLAIM_NAME}-${POD_ORDINAL}-1560428524
+#            name: ${CLAIM_NAME}-1560426122
             apiGroup: snapshot.storage.k8s.io
