--- a/docs/examples/volume-snapshot/deployment/restoresession.yaml
+++ b/docs/examples/volume-snapshot/deployment/restoresession.yaml
@@ -8,7 +8,7 @@ spec:
   target:
     volumeClaimTemplates:
       - metadata:
-          name: backup-pvc
+          name: backup-pvc-1
         spec:
           accessModes: [ "ReadWriteOnce" ]
           storageClassName: "standard"
@@ -17,5 +17,6 @@ spec:
               storage: 6Gi
           dataSource:
             kind: VolumeSnapshot
-            name: ${CLAIM_NAME}-1559026686
+            name: ${CLAIM_NAME}-1560662826
+            # name: backup-pvc-1-1560662826
             apiGroup: snapshot.storage.k8s.io
