--- a/docs/examples/volume-snapshot/statefulset/statefulset.yaml
+++ b/docs/examples/volume-snapshot/statefulset/statefulset.yaml
@@ -1,3 +1,18 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: svc
+  labels:
+    app: demo
+  namespace: demo
+spec:
+  ports:
+    - port: 80
+      name: web
+  clusterIP: None
+  selector:
+    app: stash
+---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
