--- a/docs/examples/volume-snapshot/deployment/restoresession.yaml
+++ b/docs/examples/volume-snapshot/deployment/restoresession.yaml
@@ -8,7 +8,7 @@ spec:
   target:
     volumeClaimTemplates:
       - metadata:
-          name: backup-pvc-1
+          name: source-pvc-1
         spec:
           accessModes: [ "ReadWriteOnce" ]
           storageClassName: "standard"
@@ -18,5 +18,18 @@ spec:
           dataSource:
             kind: VolumeSnapshot
             name: ${CLAIM_NAME}-1560662826
-            # name: backup-pvc-1-1560662826
+            # name: source-pvc-1-1560662826
+            apiGroup: snapshot.storage.k8s.io
+      - metadata:
+          name: source-pvc-2
+        spec:
+          accessModes: [ "ReadWriteOnce" ]
+          storageClassName: "standard"
+          resources:
+            requests:
+              storage: 6Gi
+          dataSource:
+            kind: VolumeSnapshot
+            name: ${CLAIM_NAME}-1560662826
+            # name: source-pvc-2-1560662826
             apiGroup: snapshot.storage.k8s.io
