Add user guide for deployment

--- a/docs/examples/workloads/deployment/backupconfiguration.yaml
+++ b/docs/examples/workloads/deployment/backupconfiguration.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   repository:
     name: local-repo
-  schedule: "* * * * *"
+  schedule: "*/1 * * * *"
   target:
     ref:
       apiVersion: apps/v1
