--- a/docs/examples/workloads/deployment/deployment.yaml
+++ b/docs/examples/workloads/deployment/deployment.yaml
@@ -1,12 +1,3 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: stash-sample-data
-  namespace: demo
-data:
-  file1.txt: "This test file 1"
-  file2.txt: "This is file 2"
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -26,9 +17,8 @@ spec:
       name: busybox
     spec:
       containers:
-      - args:
-        - sleep
-        - "3600"
+      - args: ["touch source/data/sample-file.txt && sleep 3000"]
+        command: ["/bin/sh", "-c"]
         image: busybox
         imagePullPolicy: IfNotPresent
         name: busybox
@@ -38,5 +28,5 @@ spec:
       restartPolicy: Always
       volumes:
       - name: source-data
-        configMap:
-          name: stash-sample-data
+        persistentVolumeClaim:
+          claimName: stash-sample-data
