--- a/docs/examples/workloads/deployment/restoresession.yaml
+++ b/docs/examples/workloads/deployment/restoresession.yaml
@@ -5,15 +5,15 @@ metadata:
   namespace: demo
 spec:
   repository:
-    name: local-repo
+    name: gcs-repo
   rules:
-    - paths:
-        - /source/data
+  - paths:
+    - /source/data/
   target: # target indicates where the recovered data will be stored
     ref:
       apiVersion: apps/v1
       kind: Deployment
       name: stash-recovered
     volumeMounts:
-      - name:  source-data
-        mountPath:  /source/data
+    - name:  source-data
+      mountPath:  /source/data
