--- a/docs/examples/workloads/daemonset/recovered_daemon.yaml
+++ b/docs/examples/workloads/daemonset/recovered_daemon.yaml
@@ -1,9 +1,22 @@
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: demo-pvc
+  namespace: demo
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: standard
+  resources:
+    requests:
+      storage: 1Gi
+---
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   labels:
-    app: stash-demo
-  name: stash-demo
+    app: stash
+  name: stash-recovered
   namespace: demo
 spec:
   selector:
@@ -16,8 +29,9 @@ spec:
       name: busybox
     spec:
       containers:
-      - args: ["touch source/data/sample-file.txt && sleep 3000"]
-        command: ["/bin/sh", "-c"]
+      - args:
+        - sleep
+        - "3600"
         image: busybox
         imagePullPolicy: IfNotPresent
         name: busybox
@@ -28,4 +42,4 @@ spec:
       volumes:
       - name: source-data
         persistentVolumeClaim:
-          claimName: stash-sample-data
+          claimName: demo-pvc
