Remove .idea file and Fix directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+.idea
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
 *.o
 *.a
@@ -23,7 +23,6 @@ _testmain.go
 *.exe
 *.test
 *.prof
-/.idea
 /dist
 **/junit.xml
 **/.env
