--- a/docs/examples/guides/latest/workloads/daemonset/restoresession.yaml
+++ b/docs/examples/guides/latest/workloads/daemonset/restoresession.yaml
@@ -1,19 +1,19 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: RestoreSession
 metadata:
-  name: ss-restore
+  name: dmn-restore
   namespace: demo
 spec:
   repository:
-    name: local-repo
+    name: gcs-repo
   rules:
   - paths:
     - /source/data
   target: # target indicates where the recovered data will be stored
     ref:
       apiVersion: apps/v1
-      kind: StatefulSet
-      name: stash-demo
+      kind: DaemonSet
+      name: stash-recovered
     volumeMounts:
     - name:  source-data
       mountPath:  /source/data
