--- a/docs/examples/guides/latest/workloads/daemonset/backupconfiguration.yaml
+++ b/docs/examples/guides/latest/workloads/daemonset/backupconfiguration.yaml
@@ -1,16 +1,16 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfiguration
 metadata:
-  name: deployment-backup
+  name: dmn-backup
   namespace: demo
 spec:
   repository:
-    name: local-repo
-  schedule: "* * * * *"
+    name: gcs-repo
+  schedule: "*/1 * * * *"
   target:
     ref:
       apiVersion: apps/v1
-      kind: Deployment
+      kind: DaemonSet
       name: stash-demo
     volumeMounts:
     - name: source-data
