--- a/docs/examples/guides/latest/workloads/deployment/deployment.yaml
+++ b/docs/examples/guides/latest/workloads/deployment/deployment.yaml
@@ -1,24 +1,12 @@
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: demo-pvc
-  namespace: demo
-spec:
-  accessModes:
-    - ReadWriteOnce
-  storageClassName: standard
-  resources:
-    requests:
-      storage: 1Gi
----
 apiVersion: apps/v1
-kind: DaemonSet
+kind: Deployment
 metadata:
   labels:
-    app: stash
-  name: stash-recovered
+    app: stash-demo
+  name: stash-demo
   namespace: demo
 spec:
+  replicas: 3
   selector:
     matchLabels:
       app: stash-demo
@@ -29,9 +17,8 @@ spec:
       name: busybox
     spec:
       containers:
-      - args:
-        - sleep
-        - "3600"
+      - args: ["touch source/data/sample-file.txt && sleep 3000"]
+        command: ["/bin/sh", "-c"]
         image: busybox
         imagePullPolicy: IfNotPresent
         name: busybox
@@ -42,4 +29,4 @@ spec:
       volumes:
       - name: source-data
         persistentVolumeClaim:
-          claimName: demo-pvc
+          claimName: stash-sample-data
