--- a/docs/examples/guides/latest/workloads/statefulset/custom_restore.yaml
+++ b/docs/examples/guides/latest/workloads/statefulset/custom_restore.yaml
@@ -1,3 +1,29 @@
+apiVersion: stash.appscode.com/v1beta1
+kind: RestoreSession
+metadata:
+  name: ss-custom-restore
+  namespace: demo
+spec:
+  repository:
+    name: local-repo
+  rules:
+  - targetHosts: ["host-3","host-4"] # "host-3" and "host-4" will have restored data of backed up host "host-1"
+    sourceHost: "host-1" # source host
+    paths:
+    - /source/data
+  - targetHosts: [] # empty host match all hosts
+    sourceHost: "" # no source host indicates that the host is pod itself
+    paths:
+    - /source/data
+  target: # target indicates where the recovered data will be stored
+    ref:
+      apiVersion: apps/v1
+      kind: StatefulSet
+      name: scaled-up-stash-demo
+    volumeMounts:
+    - name:  source-data
+      mountPath:  /source/data
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -5,9 +31,9 @@ metadata:
   namespace: demo
 spec:
   ports:
-  - name: http
-    port: 80
-    targetPort: 0
+    - name: http
+      port: 80
+      targetPort: 0
   selector:
     app: stash-demo
   clusterIP: None
@@ -15,12 +41,12 @@ spec:
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: stash-demo
+  name: scaled-up-stash-demo
   namespace: demo
   labels:
     app: stash-demo
 spec:
-  replicas: 3
+  replicas: 5
   selector:
     matchLabels:
       app: stash-demo
@@ -36,19 +62,6 @@ spec:
         command:
         - sleep
         - '3600'
-        volumeMounts:
-        - name: source-data
-          mountPath: "/source/data"
-        imagePullPolicy: IfNotPresent
-      initContainers:
-      - name: data-generator
-        image: busybox
-        command: ["/bin/sh", "-c","touch /source/data/$(POD_NAME).txt"]
-        env:
-        - name:  POD_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath:  metadata.name
         volumeMounts:
         - name: source-data
           mountPath: "/source/data"
