--- a/docs/examples/workloads/deployment/deployment.yaml
+++ b/docs/examples/workloads/deployment/deployment.yaml
@@ -1,3 +1,12 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: stash-sample-data
+  namespace: demo
+data:
+  file1.txt: "This test file 1"
+  file2.txt: "This is file 2"
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -17,8 +26,9 @@ spec:
       name: busybox
     spec:
       containers:
-      - args: ["touch source/data/sample-file.txt && sleep 3000"]
-        command: ["/bin/sh", "-c"]
+      - args:
+        - sleep
+        - "3600"
         image: busybox
         imagePullPolicy: IfNotPresent
         name: busybox
@@ -28,5 +38,5 @@ spec:
       restartPolicy: Always
       volumes:
       - name: source-data
-        persistentVolumeClaim:
-          claimName: stash-sample-data
+        configMap:
+          name: stash-sample-data
