--- a/docs/examples/workloads/statefulset/backupconfiguration.yaml
+++ b/docs/examples/workloads/statefulset/backupconfiguration.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: demo
 spec:
   repository:
-    name: gcs-repo
-  schedule: "*/1 * * * *"
+    name: local-repo
+  schedule: "* * * * *"
   target:
     ref:
       apiVersion: apps/v1
