--- a/docs/examples/design/function/volume_backup.yaml
+++ b/docs/examples/design/function/volume_backup.yaml
@@ -1,4 +1,4 @@
-# volumeBackup function backup a kubernetes volume
+# volumeBackup function backup a Kubernetes volume
 apiVersion: stash.appscode.com/v1beta1
 kind: Function
 metadata:
