--- a/docs/examples/design/function/volume_recovery.yaml
+++ b/docs/examples/design/function/volume_recovery.yaml
@@ -1,4 +1,4 @@
-# volumeRecoveryfunction Recover a kubernetes volume
+# volumeRecoveryfunction Recover a Kubernetes volume
 apiVersion: stash.appscode.com/v1beta1
 kind: Function
 metadata:
