--- a/docs/examples/design/task/volume_backup.yaml
+++ b/docs/examples/design/task/volume_backup.yaml
@@ -1,4 +1,4 @@
-# volumeBackup specifies required functions and their inputs to backup kubernetes volume
+# volumeBackup specifies required functions and their inputs to backup Kubernetes volume
 apiVersion: stash.appscode.com/v1beta1
 kind: Task
 metadata:
