--- a/docs/examples/guides/latest/restore-in-pvc-template/deployment/deployment.yaml
+++ b/docs/examples/guides/latest/restore-in-pvc-template/deployment/deployment.yaml
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: source-pvc-1
+  name: source-data
   namespace: demo
 spec:
   accessModes:
@@ -9,12 +9,12 @@ spec:
   storageClassName: standard
   resources:
     requests:
-      storage: 6Gi
+      storage: 2Gi
 ---
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: source-pvc-2
+  name: source-config
   namespace: demo
 spec:
   accessModes:
@@ -22,7 +22,7 @@ spec:
   storageClassName: standard
   resources:
     requests:
-      storage: 6Gi
+      storage: 2Gi
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -43,21 +43,21 @@ spec:
       name: busybox
     spec:
       containers:
-      - args: ["touch /source/data-1/file1.txt /source/data-2/file2.txt && sleep 3000"]
+      - args: ["echo sample_data > /source/data/data.txt; echo config_data > /source/config/config.txt && sleep 3000"]
         command: ["/bin/sh", "-c"]
         image: busybox
         imagePullPolicy: IfNotPresent
         name: busybox
         volumeMounts:
-        - mountPath: /source/data-1
-          name: source-data-1
-        - mountPath: /source/data-2
-          name: source-data-2
+        - mountPath: /source/data
+          name: source-data
+        - mountPath: /source/config
+          name: source-config
       restartPolicy: Always
       volumes:
-      - name: source-data-1
+      - name: source-data
         persistentVolumeClaim:
-          claimName: source-pvc-1
-      - name: source-data-2
+          claimName: source-data
+      - name: source-config
         persistentVolumeClaim:
-          claimName: source-pvc-2
+          claimName: source-config
