--- a/docs/examples/guides/latest/advance-use-case/restore-in-pvc-template/deployment/deployment.yaml
+++ b/docs/examples/guides/latest/advance-use-case/restore-in-pvc-template/deployment/deployment.yaml
@@ -43,7 +43,7 @@ spec:
       name: busybox
     spec:
       containers:
-      - args: ["echo sample_data > /source/data/data.txt; echo config_data > /source/config/config.txt && sleep 3000"]
+      - args: ["echo sample_data > /source/data/data.txt; echo config_data > /source/config/config.cfg && sleep 3000"]
         command: ["/bin/sh", "-c"]
         image: busybox
         imagePullPolicy: IfNotPresent
