--- a/docs/examples/guides/latest/advance-use-case/restore-in-pvc-template/statefulset/ss-backupconfiguration.yaml
+++ b/docs/examples/guides/latest/advance-use-case/restore-in-pvc-template/statefulset/ss-backupconfiguration.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   repository:
     name: gcs-repo
-  schedule: "* * * * *"
+  schedule: "*/3 * * * *"
   target:
     ref:
       apiVersion: apps/v1
