--- a/docs/examples/guides/latest/volumesnapshot/deployment/deployment.yaml
+++ b/docs/examples/guides/latest/volumesnapshot/deployment/deployment.yaml
@@ -17,27 +17,21 @@ spec:
       name: busybox
     spec:
       containers:
-      - args: ["touch source/data/sample-file1.txt && sleep 3000"]
+      - args: ["echo sample_data > source/data/data.txt; echo sample_config > source/config/config.cfg  && sleep 3000"]
         command: ["/bin/sh", "-c"]
         image: busybox
         imagePullPolicy: IfNotPresent
-        name: busybox-1
+        name: busybox
         volumeMounts:
         - mountPath: /source/data
-          name: source-data-1
-      - args: ["touch source/data/sample-file2.txt && sleep 3000"]
-        command: ["/bin/sh", "-c"]
-        image: busybox
-        imagePullPolicy: IfNotPresent
-        name: busybox-2
-        volumeMounts:
-        - mountPath: /source/data
-          name: source-data-2
+          name: source-data
+        - mountPath: /source/config
+          name: source-config
       restartPolicy: Always
       volumes:
-      - name: source-data-1
+      - name: source-data
         persistentVolumeClaim:
-         claimName: source-pvc-1
-      - name: source-data-2
+         claimName: source-data
+      - name: source-config
         persistentVolumeClaim:
-          claimName: source-pvc-2
+          claimName: source-config
