--- a/docs/examples/guides/latest/volumesnapshot/deployment/restored-deployment.yaml
+++ b/docs/examples/guides/latest/volumesnapshot/deployment/restored-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   labels:
     app: stash-demo
-  name: stash-demo
+  name: restore-demo
   namespace: demo
 spec:
   replicas: 1
@@ -17,29 +17,22 @@ spec:
       name: busybox
     spec:
       containers:
-        - args:
-            - sleep
-            - "3600"
-          image: busybox
-          imagePullPolicy: IfNotPresent
-          name: busybox-1
-          volumeMounts:
-            - mountPath: /source/data
-              name: source-data-1
-        - args:
-            - sleep
-            - "3600"
-          image: busybox
-          imagePullPolicy: IfNotPresent
-          name: busybox-2
-          volumeMounts:
-            - mountPath: /source/data
-              name: source-data-2
+      - args:
+        - sleep
+        - "3600"
+        image: busybox
+        imagePullPolicy: IfNotPresent
+        name: busybox
+        volumeMounts:
+        - mountPath: /restore/data
+          name: restore-data
+        - mountPath: /restore/config
+          name: restore-config
       restartPolicy: Always
       volumes:
-        - name: source-data-1
-          persistentVolumeClaim:
-            claimName: source-pvc-1
-        - name: source-data-2
-          persistentVolumeClaim:
-            claimName: source-pvc-2
+      - name: restore-data
+        persistentVolumeClaim:
+          claimName: restore-data
+      - name: restore-config
+        persistentVolumeClaim:
+          claimName: restore-config
