Add echo command

--- a/docs/examples/guides/latest/workloads/statefulset/statefulset.yaml
+++ b/docs/examples/guides/latest/workloads/statefulset/statefulset.yaml
@@ -33,7 +33,7 @@ spec:
       containers:
       - name: busybox
         image: busybox
-        command: ["/bin/sh", "-c","touch /source/data/$(POD_NAME).txt && sleep 3000"]
+        command: ["/bin/sh", "-c","echo $(POD_NAME) > /source/data/data.txt && sleep 3000"]
         env:
         - name:  POD_NAME
           valueFrom:
