--- a/docs/examples/guides/latest/workloads/deployment/deployment.yaml
+++ b/docs/examples/guides/latest/workloads/deployment/deployment.yaml
@@ -17,7 +17,7 @@ spec:
       name: busybox
     spec:
       containers:
-      - args: ["touch source/data/sample-file.txt && sleep 3000"]
+      - args: ["echo sample_data > /source/data/data.txt && sleep 3000"]
         command: ["/bin/sh", "-c"]
         image: busybox
         imagePullPolicy: IfNotPresent
