--- a/docs/examples/guides/latest/volumesnapshot/standalone-pvc/restoresession.yaml
+++ b/docs/examples/guides/latest/volumesnapshot/standalone-pvc/restoresession.yaml
@@ -1,23 +1,21 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: RestoreSession
 metadata:
-  name: restore
+  name: restore-pvc
   namespace: demo
 spec:
   driver: VolumeSnapshotter
   target:
-#    replicas : 3    #for Statefulset
     volumeClaimTemplates:
       - metadata:
-          name: pvc
+          name: restore-data
         spec:
           accessModes: [ "ReadWriteOnce" ]
           storageClassName: "standard"
           resources:
             requests:
-              storage: 6Gi
+              storage: 1Gi
           dataSource:
             kind: VolumeSnapshot
-#            name: ${CLAIM_NAME}-${POD_ORDINAL}-1558421829    #for Statefulset
-            name: ${CLAIM_NAME}-1558421829
+            name: source-data-1563186667
             apiGroup: snapshot.storage.k8s.io
