--- a/docs/examples/guides/latest/volumesnapshot/statefulset/backupconfiguration.yaml
+++ b/docs/examples/guides/latest/volumesnapshot/statefulset/backupconfiguration.yaml
@@ -1,16 +1,17 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfiguration
 metadata:
-  name: deployments-volume-snapshot
+  name: statefulset-volume-snapshot
   namespace: demo
 spec:
-  schedule: "* * * * *"
+  schedule: "*/1 * * * *"
   driver: VolumeSnapshotter
   target:
     ref:
       apiVersion: apps/v1
       kind: StatefulSet
-      name: web
+      name: stash-demo
+    replicas : 1
     snapshotClassName: default-snapshot-class
   retentionPolicy:
     name: 'keep-last-5'
