--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-.idea
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
 *.o
 *.a
@@ -23,6 +22,7 @@ _testmain.go
 *.exe
 *.test
 *.prof
+/.idea
 /dist
 **/junit.xml
 **/.env
